# advent-of-code-2024

./: Cargo.toml  README.md
day01/src/part1/: solution.rs
day01/src/part2/: solution.rs
day02/src/part1/: solution.rs
day02/src/part2/: solution.rs
day03/: Cargo.toml
day03/src/part1/: solution.rs
day03/src/part2/: solution.rs
day04/: Cargo.toml
day04/src/part1/: solution.rs
day04/src/part2/: solution.rs
src/: main.rs
utils/src/: lib.rs
