workspace = { members = ["day01", "day02", "day03", "utils"] }
[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
day01 = { path = "./day01" }
day02 = { path = "./day02" }
day03 = { path = "./day03" }
